tests/ui/occurs-check-2.stderr
error[E0275]: overflow setting `Box<_>` to a subtype of `_`
  --> $DIR/occurs-check-2.rs:7:9
   |
LL |     f = Box::new(g);
   |         ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
